# HSE.MLInCV

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  demo.py  dev-requirements.txt  lite-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  web_demo.py
.github/workflows/: build-wheels.yml  code-validation.yml  pre-commit.yml  verify-code.yml
human_segmentation/: demo.py
human_segmentation/models/: loaders.py
human_segmentation/utils/: args_parser.py
src/: demo.py  human_segmentation_engine.py  image_processor.py
src/cmds/: process.py
src/default/: loader.py
src/models/: loaders.py
src/utils/: args_parser.py  image_interpreter.py
tests/: conftest.py  test_no_errors.py  test_regression.py
