[metadata]
name = human_segmentation
version = 0.0.1
author = Alex Dadukin
author_email = hi@st235.xyz
description = Separate humans from background
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/st235/HSE.MLInCV
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
